--- a/mqtt-s7-ha-addon/config.json
+++ b/mqtt-s7-ha-addon/config.json
@@ -1,7 +1,7 @@
 {
   "name": "mqtt-s7-ha-addon",
   "version": "1.0.0",
-  "slug": "mqtt-s7-ha-addon",
+  "slug": "https://github.com/p0nch00/mqtt-s7-ha-addon",
   "description": "Connect S7 to MQTT",
   "startup": "application",
   "boot": "auto",
