--- a/mqtt-s7-ha-addon/config.json
+++ b/mqtt-s7-ha-addon/config.json
@@ -6,6 +6,13 @@
   "startup": "application",
   "boot": "auto",
   "host_network": false,
+  "arch": [
+    "aarch64",
+    "amd64",
+    "armhf",
+    "armv7",
+    "i386"
+  ],
   "options": {},
   "schema": {}
 }
