--- a/mqtt-s7-ha-addon/config.yaml
+++ b/mqtt-s7-ha-addon/config.yaml
@@ -1,5 +1,5 @@
 name: mqtt-s7-ha-addon
-version: 1.0.4
+version: 1.0.5
 slug: s7tomqtt
 url: https://github.com/p0nch00/mqtt-s7-ha-addon
 description: Connect S7 to MQTT
@@ -11,3 +11,5 @@ arch:
 - armhf
 - armv7
 - i386
+options:
+schema:
