--- a/mqtt-s7-ha-addon/config.yaml
+++ b/mqtt-s7-ha-addon/config.yaml
@@ -1,13 +1,17 @@
 name: mqtt-s7-ha-addon
-version: 1.0.7
+version: 1.0.9
 slug: s7tomqtt
 url: https://github.com/p0nch00/mqtt-s7-ha-addon
 description: Connect S7 to MQTT
 boot: auto
 host_network: false
 arch:
-- aarch64
-- amd64
-- armhf
-- armv7
-- i386
+  - aarch64
+  - amd64
+  - armhf
+  - armv7
+  - i386
+map:
+  - type: homeassistant_config
+    read_only: False
+    path: /ha-cfg
